Fix scaling issues, editing text, etc.
Minor text changes in 'About Us' section, please have a look. George, we need to discuss your quote - repetition of 'opportunity.'

Also same window/scaling issue, think fixed on my screen. Please see if it now messed up for you.

--- a/Final_Website/static/styles_about.css
+++ b/Final_Website/static/styles_about.css
@@ -54,10 +54,13 @@
 
 .about-us-text1 {
     grid-area: text1;
+    font-size: 0.7em;
+    margin: auto;
 }
 
 .about-us-quotes {
     grid-area: quotes;
+    font-size: 0.6em;
 }
 
 #selfie-img {
