--- a/Final_Website/static/styles_footer.css
+++ b/Final_Website/static/styles_footer.css
@@ -36,7 +36,7 @@ name {
     margin-bottom: 3em;
     margin-left: var(--margin-left);
     margin-right: var(--margin-right);
-    font-size: 1.3em;
+    font-size: 1em;
     text-align: center;
     display: flex;
     justify-content: center;
